<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="border">border</string>
    <string name="result">Result</string>
    <string name="new_round">New Round</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="_0">0</string>
    <string name="you">You</string>
    <string name="com">Computer</string>
    <string name="start">Start</string>
</resources>